# lob-project

./: .gitignore  CLAUDE.md  README.md
analysis/: README.md
data/: README.md
docs/: LOB_Technical_Specification.md
engine/: CMakeLists.txt  README.md
engine/benchmarks/: bench_fast_book.cpp  bench_helpers.hpp  bench_ref_book.cpp
engine/benchmarks/results/: 2026-06-04.txt  2026-06-05.txt  2026-06-07.txt
engine/include/: codec.h  event_listener.hpp  fast_book.hpp  fast_bookv2.hpp  hierarchical_bitset.hpp  ingest_book.h  itch_parser.h  order_book.hpp  ref_book.hpp  trading_engine.hpp  types.h
engine/legacy/: fast_book.cpp
engine/src/: codec.cpp  fast_book.cpp  fast_bookv2.cpp  hierarchical_bitset.cpp  ingest_book.cpp  itch_ingest.cpp  itch_parser.cpp  ref_book.cpp  runner.cpp
engine/tests/: test_codec.cpp  test_fast_book.cpp  test_helpers.hpp  test_hierarchical_bitset.cpp  test_invariants.cpp  test_itch_replay.cpp  test_matching.cpp  test_placeholder.cpp
ingest/: README.md
protocol/: README.md  message_types.h  messages.h
sim/: README.md
viz/: README.md
